Actualiza las rutas de la aplicación para reemplazar el componente de plantilla por un nuevo componente de lista de plantillas. Se modifica el menú de navegación para reflejar este cambio y se eliminan los archivos del componente de plantilla, mejorando la estructura del código y la navegación.

--- a/src/app/components/navigation-menu/navigation-menu.component.html
+++ b/src/app/components/navigation-menu/navigation-menu.component.html
@@ -7,7 +7,7 @@
     <app-diary-icon class="nav-icon"></app-diary-icon>
     <span>Diario</span>
   </div>
-  <div class="nav-item" [class.active]="isActive('/template')" (click)="navigateTo('/template')">
+  <div class="nav-item" [class.active]="isActive('/template-list')" (click)="navigateTo('/template-list')">
     <app-template-icon class="nav-icon"></app-template-icon>
     <span>Plantilla</span>
   </div>
