--- a/src/app/pages/template/edit/template-edit.component.html
+++ b/src/app/pages/template/edit/template-edit.component.html
@@ -1,12 +1,17 @@
-<div class="template-edit-container">
+<div class="template-edit-container" *ngIf="!isLoading">
   <div class="template-form">
     <h2 class="editable-title" contenteditable="true" (input)="onTitleChange($event)" (blur)="onTitleBlur($event)">
-      {{ template.id ? template.name : 'Nueva Plantilla' }}
+      {{ template.name || 'Nueva Plantilla' }}
     </h2>
-    
-    <div class="form-actions">
-      <button class="cancel-button" (click)="cancel()">Cancelar</button>
-      <button class="save-button" (click)="saveTemplate()">Guardar</button>
-    </div>
+  </div>
+
+  <div class="form-actions">
+    <button class="cancel-button" (click)="cancel()">Cancelar</button>
+    <button class="save-button" (click)="saveTemplate()">Guardar</button>
+  </div>
+</div> 
+<div *ngIf="isLoading">
+  <div class="loading-container">
+    <div class="loading-spinner"></div>
   </div>
 </div> 
