--- a/src/app/pages/template/edit/template-edit.component.html
+++ b/src/app/pages/template/edit/template-edit.component.html
@@ -10,8 +10,4 @@
     <button class="save-button" (click)="saveTemplate()">Guardar</button>
   </div>
 </div> 
-<div *ngIf="isLoading">
-  <div class="loading-container">
-    <div class="loading-spinner"></div>
-  </div>
-</div> 
+<app-loading-spinner *ngIf="isLoading"></app-loading-spinner> 
