--- a/src/app/pages/template/list/template-list.component.css
+++ b/src/app/pages/template/list/template-list.component.css
@@ -1,7 +1,7 @@
 .template-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
