--- a/src/app/pages/template/edit/template-edit.component.css
+++ b/src/app/pages/template/edit/template-edit.component.css
@@ -8,13 +8,14 @@
 }
 
 .editable-title {
-  margin: 0px;
-  padding: 10px;
+  margin: 10px 10px 0px 10px;
+  padding: 0px;
   border: 2px solid transparent;
   border-radius: 4px;
   outline: none;
   cursor: text;
   transition: border-color 0.3s ease;
+  font-size: 1.15rem;
 }
 
 .editable-title:focus {
@@ -27,55 +28,48 @@
   color: #999;
 }
 
-.form-group {
-  margin-bottom: 20px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: 500;
-}
-
-.form-group input,
-.form-group textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-.form-group textarea {
-  min-height: 100px;
-  resize: vertical;
-}
-
-.form-actions {
+.template-properties {
   display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 1.5rem;
+  padding: 10px 10px 0px 10px;
 }
 
-.cancel-button {
-  background-color: #f44336;
-  color: white;
-  padding: 10px 20px;
-  border: none;
+.property {
+  display: flex;
+  gap: 0.15rem;
+  align-items: center;
+}
+
+.property-label {
+  color: black;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.property-value {
+  color: black;
+  font-size: 1rem;
+  padding: 2px;
+  border: 2px solid transparent;
   border-radius: 4px;
-  cursor: pointer;
+  outline: none;
+  cursor: text;
+  transition: border-color 0.3s ease;
 }
 
-.save-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.property-value:focus {
+  border-color: var(--primary-color);
+  background-color: #f8f8f8;
 }
 
-button:hover {
-  opacity: 0.9;
-} 
+.unit {
+  color: var(--quinary-color);
+  font-size: 1rem;
+}
+
+
+
+
+
+
+
