--- a/src/app/pages/template/edit/template-edit.component.css
+++ b/src/app/pages/template/edit/template-edit.component.css
@@ -7,8 +7,17 @@
   width: 100%;
 }
 
+.template-form p {
+  margin: 15px 10px 0px 10px;
+  padding: 0px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-align: center;
+  color: var(--quinary-color);
+}
+
 .editable-title {
-  margin: 10px 10px 0px 10px;
+  margin: 10px;
   padding: 0px;
   border: 2px solid transparent;
   border-radius: 4px;
@@ -31,7 +40,8 @@
 .template-properties {
   display: flex;
   gap: 1.5rem;
-  padding: 10px 10px 0px 10px;
+  padding: 5px 10px;
+  justify-content: space-evenly;
 }
 
 .property {
@@ -65,6 +75,31 @@
 .unit {
   color: var(--quinary-color);
   font-size: 1rem;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.search-input {
+  width: 100%;
+  padding: 8px 12px;
+  border: none;
+  font-size: 1rem;
+  transition: border-color 0.3s ease;
+  background-color: #F9F9F9;
+}
+
+.search-input:focus {
+  outline: none;
+  border-color: var(--primary-color);
+}
+
+.search-input::placeholder {
+  color: var(--quaternary-color);
+  font-weight: bold;
 }
 
 
