--- a/src/app/pages/template/edit/template-edit.component.html
+++ b/src/app/pages/template/edit/template-edit.component.html
@@ -34,8 +34,8 @@
   </div>
 
   <div class="exercises-container">
-    <app-exercise-card *ngFor="let exercise of availableExercises" [exercise]="exercise">
-    </app-exercise-card>
+    <app-exercise-card *ngFor="let exercise of availableExercises" [exercise]="exercise"
+      [selected]="selectedExercises.includes(exercise)" (selectedChange)="onSelectedChange($event)"></app-exercise-card>
   </div>
 </div>
 <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
