Actualiza la interfaz Template para incluir la propiedad 'weight' en defaultProperties y modifica el componente de edición de plantillas para gestionar la selección de ejercicios, incorporando la lógica para agregar y eliminar ejercicios seleccionados. Se ajustan las propiedades predeterminadas y se mejora la estructura de datos en el servicio de gestión de datos.

--- a/src/app/pages/template/edit/template-edit.component.html
+++ b/src/app/pages/template/edit/template-edit.component.html
@@ -35,7 +35,8 @@
 
   <div class="exercises-container">
     <app-exercise-card *ngFor="let exercise of availableExercises" [exercise]="exercise"
-      [selected]="selectedExercises.includes(exercise)" (selectedChange)="onSelectedChange($event)"></app-exercise-card>
+      [selected]="getExerciseSelected(exercise)"
+      (selectedChange)="onSelectedChange($event)"></app-exercise-card>
   </div>
 </div>
 <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
