Agrega propiedades al componente ExerciseCard para mostrar series, repeticiones, peso y tiempo. Se actualiza el HTML y CSS para mejorar la presentación de estas propiedades. Además, se vinculan las propiedades predeterminadas desde el componente de edición de plantillas.

--- a/src/app/components/exercise-card/exercise-card.component.css
+++ b/src/app/components/exercise-card/exercise-card.component.css
@@ -46,3 +46,15 @@
 .exercise-selected:hover {
   color: var(--primary-color);
 }
+
+.exercise-properties {
+  display: flex;
+  flex-direction: column;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.exercise-serie {
+  display: flex;
+  flex-direction: row;
+}
