--- a/src/app/pages/template/edit/template-edit.component.css
+++ b/src/app/pages/template/edit/template-edit.component.css
@@ -39,9 +39,8 @@
 
 .template-properties {
   display: flex;
-  gap: 1.5rem;
   padding: 5px 10px;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .property {
@@ -58,13 +57,14 @@
 
 .property-value {
   color: black;
-  font-size: 1rem;
-  padding: 2px;
+  font-size: 1.2rem;
+  padding: 4px;
   border: 2px solid transparent;
   border-radius: 4px;
   outline: none;
   cursor: text;
   transition: border-color 0.3s ease;
+  background-color: #f0f0f0;
 }
 
 .property-value:focus {
