--- a/src/app/components/exercise-card/exercise-card.component.css
+++ b/src/app/components/exercise-card/exercise-card.component.css
@@ -60,30 +60,10 @@
   color: var(--primary-color);
 }
 
-.exercise-serie-icons-space {
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.exercise-serie-icons-space:hover {
-  color: var(--primary-color);
-}
-
-.exercise-serie-icon {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 35px;
-  height: 20px;
-}
-
 .exercise-properties {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -114,3 +94,11 @@
   padding: 5px;
   border-radius: 5px;
 }
+
+.exercise-serie-add-serie {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
