--- a/src/app/pages/template/list/template-list.component.css
+++ b/src/app/pages/template/list/template-list.component.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  margin-bottom: 130px;
 }
 
 .template-item {
@@ -39,9 +40,15 @@
   width: 75%;
   margin-bottom: 30px;
   transition: background-color 0.3s;
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 100px;
+  position: fixed;
+  bottom: 6%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  z-index: 1000;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
