Add icon placeholder to ExerciseCard component for improved layout. Update CSS to define icon dimensions.

--- a/src/app/components/exercise-card/exercise-card.component.html
+++ b/src/app/components/exercise-card/exercise-card.component.html
@@ -29,6 +29,7 @@
                 <span class="exercise-serie-weight-unit">kg/lbs</span>
             </p>
             <p class="exercise-serie-add-serie" *ngIf="!isViewMode">
+                <span class="icon-placeholder" *ngIf="templateExercise.sets.length - 1 !== i"></span>
                 <app-minus-circle-icon *ngIf="templateExercise.sets.length != 1"
                     (click)="removeSerie(i)"></app-minus-circle-icon>
                 <app-plus-circle-icon *ngIf="i === templateExercise.sets.length - 1"
